[project]
name = "diabetic-retinopathy"
version = "0.1.0"
description = "SAM lesion segmentation and CNN disease grading workflows for diabetic retinopathy experiments."
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.18.0",
    "matplotlib>=3.8.0",
    "monai>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "patchify>=0.2.3",
    "Pillow>=10.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "tifffile>=2024.2.12",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
    "transformers>=4.39.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
